almost there. some alignment fixes needed

--- a/client/src/app/Flight/index.css
+++ b/client/src/app/Flight/index.css
@@ -13,6 +13,7 @@
     font-size: 15px;
     line-height: 18px;
     color: #444444;
+    grid-gap: 20px;
 }
 
 
